--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "mocha index.spec.js --exit --timeout 5000",
     "lint": "eslint '**/*.js'",
-    "lint:fix": "eslint '**/*.js' --fix"
+    "lint:fix": "eslint '**/*.js' --fix",
+    "doc": "jsdoc -c jsdoc.json"
   },
   "repository": {
     "type": "git",
@@ -28,8 +29,9 @@
   },
   "devDependencies": {
     "@aero/eslint-config": "1.0.5",
-    "eslint": "7.9.0",
     "chai": "4.2.0",
+    "eslint": "7.9.0",
+    "jsdoc": "^3.6.6",
     "mocha": "8.1.3"
   }
 }
