--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "test": "mocha index.spec.js --exit --timeout 5000",
     "lint": "eslint '**/*.js'",
-    "lint:fix": "eslint '**/*.js' --fix",
-    "doc": "jsdoc -c jsdoc.json"
+    "lint:fix": "eslint '**/*.js' --fix"
   },
   "repository": {
     "type": "git",
@@ -24,14 +23,20 @@
     "url": "https://github.com/puf17640/tinder.js/issues"
   },
   "homepage": "https://github.com/puf17640/tinder.js#readme",
-  "dependencies": {
-    "@aero/centra": "1.0.6"
-  },
   "devDependencies": {
     "@aero/eslint-config": "1.0.5",
-    "chai": "4.2.0",
-    "eslint": "7.9.0",
-    "jsdoc": "^3.6.6",
-    "mocha": "8.1.3"
+    "@types/chai": "^4.2.18",
+    "@types/mocha": "^8.2.2",
+    "@types/node": "^15.3.0",
+    "chai": "4.3.4",
+    "eslint": "7.26.0",
+    "mocha": "8.4.0",
+    "typescript": "^4.2.4"
+  },
+  "dependencies": {
+    "@aero/centra": "^1.0.6"
+  },
+  "engines": {
+    "node": ">=12"
   }
 }
