--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,18 +1,22 @@
 {
-	"extends": [
-		"@aero"
-	],
-	"globals": {
-		"Atomics": "readonly",
-		"SharedArrayBuffer": "readonly"
-	},
-	"rules": {
-		"no-unused-expressions": [
-			1,
-			{
-				"allowTernary": true
-			}
-		],
-		"curly": 0
-	}
-}
+    "env": {
+      "browser": true,
+      "node": true,
+      "es2021": true
+    },
+    "rules": {
+      "@typescript-eslint/semi": "off",
+      "@typescript-eslint/no-unused-vars": "warn",
+      "import/prefer-default-export": "off",
+      "no-underscore-dangle": ["error", { "allow": ["_id", "_client", "_token", "_roles", "_Log", "_apm"] }]
+    },
+    "extends": ["airbnb-typescript/base", "prettier"],
+    "parser": "@typescript-eslint/parser",
+    "parserOptions": {
+      "ecmaVersion": 12,
+      "sourceType": "module",
+      "project": "./tsconfig.json"
+    },
+    "plugins": ["@typescript-eslint", "prettier"],
+    "ignorePatterns": "**/*register.*"
+  }
