--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,7 +8,7 @@
       "@typescript-eslint/semi": "off",
       "@typescript-eslint/no-unused-vars": "warn",
       "import/prefer-default-export": "off",
-      "no-underscore-dangle": ["error", { "allow": ["_id", "_client", "_token", "_roles", "_Log", "_apm"] }]
+      "no-underscore-dangle": ["error", { "allow": ["_id", "_client", "_token", "_roles", "_Log", "_LRU"] }]
     },
     "extends": ["airbnb-typescript/base", "prettier"],
     "parser": "@typescript-eslint/parser",
