[TASK] reinitialized the project

--- a/package.json
+++ b/package.json
@@ -1,35 +1,33 @@
 {
   "name": "tinderjs",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "description": "Javascript Wrapper for the Tinder API",
-  "main": "index.js",
-  "scripts": {
-    "test": "mocha index.spec.js --exit --timeout 5000",
-    "lint": "eslint '**/*.js'",
-    "lint:fix": "eslint '**/*.js' --fix"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/puf17640/tinder.js.git"
-  },
-  "keywords": [
-    "wrapper",
-    "api",
-    "tinder"
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "files": [
+    "/dist"
   ],
-  "author": "puf17640",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/puf17640/tinder.js/issues"
-  },
-  "homepage": "https://github.com/puf17640/tinder.js#readme",
-  "dependencies": {
-    "@aero/centra": "1.0.6"
-  },
   "devDependencies": {
-    "@aero/eslint-config": "1.0.5",
-    "eslint": "7.9.0",
-    "chai": "4.2.0",
-    "mocha": "8.1.3"
+    "eslint": "^8.7.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "husky": "^7.0.4",
+    "prettier": "^2.5.1",
+    "typedoc": "^0.22.10"
+  },
+  "scripts": {
+    "lint-staged": "npm run fix",
+    "fix": "eslint --cache --fix src && prettier --write --ignore-unknown src",
+    "lint": "eslint src --ext .ts && prettier --check --ignore-unknown src",
+    "build": "tsc",
+    "generate-docs": "npx typedoc"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "dependencies": {
+    "typescript": "^4.5.4"
   }
 }
