--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   ],
   "devDependencies": {
     "eslint": "^8.7.0",
+    "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-prettier": "^4.0.0",
     "husky": "^7.0.4",
     "prettier": "^2.5.1",
@@ -17,8 +19,8 @@
   },
   "scripts": {
     "lint-staged": "npm run fix",
-    "fix": "eslint --cache --fix src && prettier --write --ignore-unknown src",
-    "lint": "eslint src --ext .ts && prettier --check --ignore-unknown src",
+    "fix": "eslint --cache --fix src/**/*.ts && prettier --write --ignore-unknown src",
+    "lint": "eslint src/**/*.ts && prettier --check --ignore-unknown src",
     "build": "tsc",
     "generate-docs": "npx typedoc"
   },
