[TASK] updated workflows

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -23,3 +23,5 @@ jobs:
         env:
           NODE_ENV: production
       - run: npm run build
+      # TODO: implement npm login
+      - run: npm publish
