--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,19 @@
 {
   "compilerOptions": {
-    "strict": true,
-    "module": "commonjs",
     "target": "es2015",
     "declaration": true,
-    "outDir": "./dist"
+    "outDir": "./dist",
+    "allowJs": true,
+    "skipLibCheck": true,
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
+    "strict": true,
+    "forceConsistentCasingInFileNames": true,
+    "module": "esnext",
+    "moduleResolution": "node",
+    "resolveJsonModule": true,
+    "isolatedModules": true,
+    "noEmit": true
   },
   "typedocOptions": {
     "entryPoints": ["src/index.ts"],
