--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-prettier": "^4.0.0",
     "husky": "^7.0.4",
+    "jest": "^27.4.7",
+    "jest-cli": "^27.4.7",
     "prettier": "^2.5.1",
     "typedoc": "^0.22.10"
   },
@@ -33,7 +35,7 @@
     }
   },
   "dependencies": {
-    "date-fns": "^2.28.0",
-    "typescript": "^4.5.4"
+    "date-fns": "2.28.0",
+    "typescript": "4.5.4"
   }
 }
