--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "/dist"
   ],
   "devDependencies": {
+    "@babel/preset-typescript": "^7.16.7",
     "@typescript-eslint/eslint-plugin": "^5.10.0",
     "@typescript-eslint/parser": "^5.10.0",
     "eslint": "^8.7.0",
@@ -20,6 +21,7 @@
     "jest": "^27.4.7",
     "jest-cli": "^27.4.7",
     "prettier": "^2.5.1",
+    "ts-node": "^10.4.0",
     "typedoc": "^0.22.10"
   },
   "scripts": {
@@ -27,16 +29,29 @@
     "fix": "eslint --cache --fix src/**/*.ts && prettier --write --ignore-unknown src",
     "lint": "eslint src/**/*.ts && prettier --check --ignore-unknown src",
     "build": "tsc",
-    "generate-docs": "npx typedoc"
+    "generate-docs": "npx typedoc",
+    "test": "jest"
   },
   "husky": {
     "hooks": {
       "pre-commit": "lint-staged"
     }
   },
+  "jest": {
+    "preset": "ts-jest",
+    "testEnvironment": "node",
+    "transform": {
+      "node_modules/variables/.+\\.(j|t)s?$": "ts-jest"
+    },
+    "transformIgnorePatterns": [
+      "node_modules/(?!variables/.*)"
+    ]
+  },
   "dependencies": {
+    "@babel/preset-env": "^7.16.11",
     "@types/jest": "^27.4.0",
     "date-fns": "2.28.0",
+    "isomorphic-fetch": "^3.0.0",
     "typescript": "4.5.4"
   }
 }
